<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <EditText
        android:id="@+id/etEmail"
        style="@style/viewCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        />


    <EditText
        android:id="@+id/etPassword"
        style="@style/viewCustom"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/viewCustom"
        android:background="@color/colorPrimary"
        android:onClick="login"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textStyle="bold" />


    <Button
        android:id="@+id/create"
        style="@style/viewCustom"
        android:background="@color/colorPrimary"
        android:onClick="register"
        android:text="@string/createAct"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtForgotPassword"
        style="@style/viewCustom"
        android:layout_below="@id/btnLogin"
        android:onClick="forgotPassword"
        android:gravity="center_horizontal"
        android:text="@string/forgotPassword"
        android:textSize="20sp" />


</LinearLayout>